--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html" style="font-family: 'Playfair Display', serif;">
-                <i class="fas fa-spa me-2"></i>SpaStore
+                <img src="assets/images/LOGO01.png" alt="SpaStore" height="40" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -80,7 +80,8 @@
                         Cửa Hàng Nước Hoa
                     </h1>
                     <p class="lead mb-4">
-                        Khám phá bộ sưu tập nước hoa cao cấp với hàng trăm lựa chọn từ những thương hiệu nổi tiếng thế giới
+                        Khám phá bộ sưu tập nước hoa cao cấp với hàng trăm lựa chọn từ những thương hiệu nổi tiếng thế
+                        giới
                     </p>
                     <div class="d-flex align-items-center text-muted">
                         <span class="me-3">
@@ -97,12 +98,10 @@
                     <!-- Search Bar -->
                     <div class="search-container">
                         <div class="position-relative">
-                            <input type="text" 
-                                   class="form-control form-control-lg" 
-                                   id="product-search" 
-                                   placeholder="Tìm kiếm nước hoa, thương hiệu..."
-                                   style="padding-right: 50px;">
-                            <button class="btn position-absolute end-0 top-0 h-100 px-3 border-0 bg-transparent text-muted">
+                            <input type="text" class="form-control form-control-lg" id="product-search"
+                                placeholder="Tìm kiếm nước hoa, thương hiệu..." style="padding-right: 50px;">
+                            <button
+                                class="btn position-absolute end-0 top-0 h-100 px-3 border-0 bg-transparent text-muted">
                                 <i class="fas fa-search"></i>
                             </button>
                         </div>
@@ -126,7 +125,7 @@
                             <h5 class="filter-title fw-bold mb-3">
                                 <i class="fas fa-filter me-2"></i>Bộ lọc
                             </h5>
-                            
+
                             <!-- Clear Filters Button -->
                             <button class="btn btn-outline-secondary btn-sm mb-3 w-100" id="clear-filters">
                                 <i class="fas fa-times me-2"></i>Xóa tất cả bộ lọc
@@ -153,7 +152,8 @@
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="unisex" id="filter-unisex">
+                                        <input class="form-check-input" type="checkbox" value="unisex"
+                                            id="filter-unisex">
                                         <label class="form-check-label" for="filter-unisex">
                                             <i class="fas fa-venus-mars me-1 text-success"></i>
                                             Unisex <span class="text-muted">(6)</span>
@@ -175,13 +175,15 @@
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="tom-ford" id="filter-tom-ford">
+                                        <input class="form-check-input" type="checkbox" value="tom-ford"
+                                            id="filter-tom-ford">
                                         <label class="form-check-label" for="filter-tom-ford">
                                             Tom Ford <span class="text-muted">(2)</span>
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="chanel" id="filter-chanel">
+                                        <input class="form-check-input" type="checkbox" value="chanel"
+                                            id="filter-chanel">
                                         <label class="form-check-label" for="filter-chanel">
                                             Chanel <span class="text-muted">(2)</span>
                                         </label>
@@ -193,13 +195,15 @@
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="le-labo" id="filter-le-labo">
+                                        <input class="form-check-input" type="checkbox" value="le-labo"
+                                            id="filter-le-labo">
                                         <label class="form-check-label" for="filter-le-labo">
                                             Le Labo <span class="text-muted">(2)</span>
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="byredo" id="filter-byredo">
+                                        <input class="form-check-input" type="checkbox" value="byredo"
+                                            id="filter-byredo">
                                         <label class="form-check-label" for="filter-byredo">
                                             Byredo <span class="text-muted">(2)</span>
                                         </label>
@@ -210,31 +214,36 @@
                                     </button>
                                     <div id="more-brands" style="display: none;">
                                         <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="maison-francis" id="filter-maison-francis">
+                                            <input class="form-check-input" type="checkbox" value="maison-francis"
+                                                id="filter-maison-francis">
                                             <label class="form-check-label" for="filter-maison-francis">
                                                 Maison Francis <span class="text-muted">(2)</span>
                                             </label>
                                         </div>
                                         <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="yves-saint-laurent" id="filter-ysl">
+                                            <input class="form-check-input" type="checkbox" value="yves-saint-laurent"
+                                                id="filter-ysl">
                                             <label class="form-check-label" for="filter-ysl">
                                                 YSL <span class="text-muted">(2)</span>
                                             </label>
                                         </div>
                                         <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="diptyque" id="filter-diptyque">
+                                            <input class="form-check-input" type="checkbox" value="diptyque"
+                                                id="filter-diptyque">
                                             <label class="form-check-label" for="filter-diptyque">
                                                 Diptyque <span class="text-muted">(2)</span>
                                             </label>
                                         </div>
                                         <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="giorgio-armani" id="filter-armani">
+                                            <input class="form-check-input" type="checkbox" value="giorgio-armani"
+                                                id="filter-armani">
                                             <label class="form-check-label" for="filter-armani">
                                                 Giorgio Armani <span class="text-muted">(2)</span>
                                             </label>
                                         </div>
                                         <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="hermes" id="filter-hermes">
+                                            <input class="form-check-input" type="checkbox" value="hermes"
+                                                id="filter-hermes">
                                             <label class="form-check-label" for="filter-hermes">
                                                 Hermès <span class="text-muted">(2)</span>
                                             </label>
@@ -250,28 +259,32 @@
                                 </h6>
                                 <div class="filter-options">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="spring" id="filter-spring">
+                                        <input class="form-check-input" type="checkbox" value="spring"
+                                            id="filter-spring">
                                         <label class="form-check-label" for="filter-spring">
                                             <i class="fas fa-leaf me-1 text-success"></i>
                                             Xuân <span class="text-muted">(6)</span>
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="summer" id="filter-summer">
+                                        <input class="form-check-input" type="checkbox" value="summer"
+                                            id="filter-summer">
                                         <label class="form-check-label" for="filter-summer">
                                             <i class="fas fa-sun me-1 text-warning"></i>
                                             Hạ <span class="text-muted">(6)</span>
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="autumn" id="filter-autumn">
+                                        <input class="form-check-input" type="checkbox" value="autumn"
+                                            id="filter-autumn">
                                         <label class="form-check-label" for="filter-autumn">
                                             <i class="fas fa-seedling me-1 text-orange"></i>
                                             Thu <span class="text-muted">(6)</span>
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="winter" id="filter-winter">
+                                        <input class="form-check-input" type="checkbox" value="winter"
+                                            id="filter-winter">
                                         <label class="form-check-label" for="filter-winter">
                                             <i class="fas fa-snowflake me-1 text-primary"></i>
                                             Đông <span class="text-muted">(6)</span>
@@ -296,7 +309,8 @@
                     <!-- Sort and View Options -->
                     <div class="d-flex justify-content-between align-items-center mb-4 flex-wrap">
                         <div class="results-info">
-                            <span class="text-muted">Hiển thị <span id="showing-results">1-24</span> của <span id="total-results">24</span> sản phẩm</span>
+                            <span class="text-muted">Hiển thị <span id="showing-results">1-24</span> của <span
+                                    id="total-results">24</span> sản phẩm</span>
                         </div>
                         <div class="view-options d-flex align-items-center gap-3">
                             <span class="text-muted small">Sắp xếp:</span>
@@ -309,10 +323,12 @@
                                 <option value="newest">Mới nhất</option>
                             </select>
                             <div class="view-toggle ms-3">
-                                <button class="btn btn-sm btn-outline-secondary active" id="grid-view" title="Xem dạng lưới">
+                                <button class="btn btn-sm btn-outline-secondary active" id="grid-view"
+                                    title="Xem dạng lưới">
                                     <i class="fas fa-th"></i>
                                 </button>
-                                <button class="btn btn-sm btn-outline-secondary" id="list-view" title="Xem dạng danh sách">
+                                <button class="btn btn-sm btn-outline-secondary" id="list-view"
+                                    title="Xem dạng danh sách">
                                     <i class="fas fa-list"></i>
                                 </button>
                             </div>
@@ -377,9 +393,11 @@
             <div class="row g-4">
                 <div class="col-lg-4">
                     <h5 class="fw-bold mb-3" style="font-family: 'Playfair Display', serif;">
-                        <i class="fas fa-spa me-2"></i>SpaStore
+                        <img src="assets/images/LOGO01.png" alt="SpaStore" height="32"
+                            class="d-inline-block align-text-top me-2">
                     </h5>
-                    <p class="text-light">Điểm đến cao cấp của bạn cho nước hoa xa xỉ chính hãng từ khắp nơi trên thế giới.</p>
+                    <p class="text-light">Điểm đến cao cấp của bạn cho nước hoa xa xỉ chính hãng từ khắp nơi trên thế
+                        giới.</p>
                     <p class="text-light">
                         <i class="fas fa-envelope me-2"></i> spa.store@gmail.com<br>
                         <i class="fas fa-phone me-2"></i> +84 (028) 123-4567
@@ -395,8 +413,10 @@
                     <h6 class="fw-bold mb-3">Mua sắm</h6>
                     <ul class="list-unstyled">
                         <li><a href="shop.html?filter=men" class="text-light text-decoration-none">Nước hoa nam</a></li>
-                        <li><a href="shop.html?filter=women" class="text-light text-decoration-none">Nước hoa nữ</a></li>
-                        <li><a href="shop.html?filter=unisex" class="text-light text-decoration-none">Nước hoa unisex</a></li>
+                        <li><a href="shop.html?filter=women" class="text-light text-decoration-none">Nước hoa nữ</a>
+                        </li>
+                        <li><a href="shop.html?filter=unisex" class="text-light text-decoration-none">Nước hoa
+                                unisex</a></li>
                         <li><a href="shop.html" class="text-light text-decoration-none">Tất cả sản phẩm</a></li>
                     </ul>
                 </div>
@@ -421,7 +441,8 @@
             </div>
             <hr class="my-4">
             <div class="text-center">
-                <p class="mb-0">&copy; 2024 SpaStore | All rights reserved | <a href="index.html" class="text-light">Trang chủ</a></p>
+                <p class="mb-0">&copy; 2024 SpaStore | All rights reserved | <a href="index.html"
+                        class="text-light">Trang chủ</a></p>
             </div>
         </div>
     </footer>
