--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
             <a class="navbar-brand fw-bold" href="#" style="font-family: 'Playfair Display', serif;">
-                <i class="fas fa-spa me-2"></i>SpaStore
+                <img src="assets/images/LOGO01.png" alt="SpaStore" height="40" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -582,7 +582,8 @@
             <div class="row g-4">
                 <div class="col-lg-4">
                     <h5 class="fw-bold mb-3" style="font-family: 'Playfair Display', serif;">
-                        <i class="fas fa-spa me-2"></i>SpaStore
+                        <img src="assets/images/LOGO01.png" alt="SpaStore" height="32"
+                            class="d-inline-block align-text-top me-2">
                     </h5>
                     <p class="text-light">Điểm đến cao cấp của bạn cho nước hoa xa xỉ chính hãng từ khắp nơi trên thế
                         giới.</p>
