create 3 page categories

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#" style="font-family: 'Playfair Display', serif;">
+            <a class="navbar-brand fw-bold" href="index.html" style="font-family: 'Playfair Display', serif;">
                 <img src="assets/images/LOGO01.png" alt="SpaStore" height="40" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -44,9 +44,10 @@
                             Sản phẩm
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="shop.html?filter=men">Nước hoa nam</a></li>
-                            <li><a class="dropdown-item" href="shop.html?filter=women">Nước hoa nữ</a></li>
-                            <li><a class="dropdown-item" href="shop.html?filter=unisex">Nước hoa unisex</a></li>
+                            <li><a class="dropdown-item" href="nuoc-hoa-nam.html" target="_blank">Nước hoa nam</a></li>
+                            <li><a class="dropdown-item" href="nuoc-hoa-nu.html" target="_blank">Nước hoa nữ</a></li>
+                            <li><a class="dropdown-item" href="nuoc-hoa-unisex.html" target="_blank">Nước hoa unisex</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item">
