--- a/shop.html
+++ b/shop.html
@@ -44,9 +44,10 @@
                             Sản phẩm
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#" data-filter="men">Nước hoa nam</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="women">Nước hoa nữ</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="unisex">Nước hoa unisex</a></li>
+                            <li><a class="dropdown-item" href="nuoc-hoa-nam.html" target="_blank">Nước hoa nam</a></li>
+                            <li><a class="dropdown-item" href="nuoc-hoa-nu.html" target="_blank">Nước hoa nữ</a></li>
+                            <li><a class="dropdown-item" href="nuoc-hoa-unisex.html" target="_blank">Nước hoa unisex</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item">
