Change header color, footer to white, purple button, change themes to spa, beauty

--- a/nuoc-hoa-nu.html
+++ b/nuoc-hoa-nu.html
@@ -22,7 +22,7 @@
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html" style="font-family: 'Playfair Display', serif;">
                 <img src="assets/images/LOGO01.png" alt="SpaStore" height="40" class="d-inline-block align-text-top">
@@ -62,10 +62,10 @@
                     </li>
                 </ul>
                 <div class="d-flex">
-                    <a href="#" class="btn btn-outline-light me-2">
+                    <a href="#" class="btn btn-outline-primary me-2">
                         <i class="fas fa-user"></i> Tài khoản
                     </a>
-                    <a href="#" class="btn btn-outline-light">
+                    <a href="#" class="btn btn-outline-primary">
                         <i class="fas fa-shopping-cart"></i> Giỏ hàng
                     </a>
                 </div>
@@ -718,7 +718,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white py-5">
+    <footer class="bg-white py-5">
         <div class="container">
             <div class="row g-4">
                 <div class="col-lg-4">
@@ -726,9 +726,9 @@
                         <img src="assets/images/LOGO01.png" alt="SpaStore" height="32"
                             class="d-inline-block align-text-top me-2">
                     </h5>
-                    <p class="text-light">Điểm đến cao cấp của bạn cho nước hoa xa xỉ chính hãng từ khắp nơi trên thế
+                    <p>Điểm đến cao cấp của bạn cho nước hoa xa xỉ chính hãng từ khắp nơi trên thế
                         giới.</p>
-                    <p class="text-light">
+                    <p>
                         <i class="fas fa-envelope me-2"></i> spa.store@gmail.com<br>
                         <i class="fas fa-phone me-2"></i> +84 (028) 123-4567
                     </p>
@@ -742,25 +742,25 @@
                 <div class="col-lg-2">
                     <h6 class="fw-bold mb-3">Mua sắm</h6>
                     <ul class="list-unstyled">
-                        <li><a href="nuoc-hoa-nam.html" class="text-light text-decoration-none">Nước hoa nam</a></li>
-                        <li><a href="nuoc-hoa-nu.html" class="text-light text-decoration-none">Nước hoa nữ</a></li>
-                        <li><a href="nuoc-hoa-unisex.html" class="text-light text-decoration-none">Nước hoa unisex</a>
+                        <li><a href="nuoc-hoa-nam.html" class="text-decoration-none">Nước hoa nam</a></li>
+                        <li><a href="nuoc-hoa-nu.html" class="text-decoration-none">Nước hoa nữ</a></li>
+                        <li><a href="nuoc-hoa-unisex.html" class="text-decoration-none">Nước hoa unisex</a>
                         </li>
-                        <li><a href="shop.html" class="text-light text-decoration-none">Tất cả sản phẩm</a></li>
+                        <li><a href="shop.html" class="text-decoration-none">Tất cả sản phẩm</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
                     <h6 class="fw-bold mb-3">Dịch vụ khách hàng</h6>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-light text-decoration-none">Vận chuyển & Đổi trả</a></li>
-                        <li><a href="#" class="text-light text-decoration-none">Hướng dẫn kích thước</a></li>
-                        <li><a href="#" class="text-light text-decoration-none">Hướng dẫn bảo quản</a></li>
-                        <li><a href="#" class="text-light text-decoration-none">Liên hệ hỗ trợ</a></li>
+                        <li><a href="#" class="text-decoration-none">Vận chuyển & Đổi trả</a></li>
+                        <li><a href="#" class="text-decoration-none">Hướng dẫn kích thước</a></li>
+                        <li><a href="#" class="text-decoration-none">Hướng dẫn bảo quản</a></li>
+                        <li><a href="#" class="text-decoration-none">Liên hệ hỗ trợ</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
                     <h6 class="fw-bold mb-3">Vị trí cửa hàng</h6>
-                    <div class="text-light small">
+                    <div class="small">
                         <p><i class="fas fa-map-marker-alt me-2"></i> 123 Nguyễn Huệ, Quận 1, TP.HCM<br>
                             Mở cửa: 9h - 21h</p>
                         <p><i class="fas fa-map-marker-alt me-2"></i> 456 Hoàn Kiếm, Hà Nội<br>
@@ -770,8 +770,8 @@
             </div>
             <hr class="my-4">
             <div class="text-center">
-                <p class="mb-0">&copy; 2024 SpaStore | All rights reserved | <a href="index.html"
-                        class="text-light">Trang chủ</a></p>
+                <p class="mb-0">&copy; 2024 SpaStore | All rights reserved | <a href="index.html" class="">Trang chủ</a>
+                </p>
             </div>
         </div>
     </footer>
