Add meta for SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpaStore - Bộ Sưu Tập Nước Hoa Cao Cấp</title>
+
+    <!-- SEO Meta Tags for Iris Beauty Spa & Beauty -->
+    <title>Iris Beauty - Thẩm Mỹ Viện & Spa Chuyên Nghiệp | Chăm Sóc Sắc Đẹp Toàn Diện</title>
+    <meta name="description"
+        content="Iris Beauty - Thẩm mỹ viện & spa chuyên nghiệp, cung cấp dịch vụ làm đẹp, trị liệu da, phun xăm thẩm mỹ, tắm trắng, cấy collagen, nâng cơ, trẻ hóa và chăm sóc sắc đẹp toàn diện tại Việt Nam.">
+    <meta name="keywords"
+        content="Iris Beauty, spa, thẩm mỹ viện, làm đẹp, trị mụn, tắm trắng, phun xăm, cấy collagen, nâng cơ, trẻ hóa da, chăm sóc da, dịch vụ spa, spa uy tín, spa Việt Nam, spa chuyên nghiệp">
+    <meta name="author" content="Iris Beauty Spa & Beauty">
+    <meta property="og:title" content="Iris Beauty - Thẩm Mỹ Viện & Spa Chuyên Nghiệp">
+    <meta property="og:description"
+        content="Dẫn đầu xu hướng làm đẹp, trị liệu da, phun xăm, tắm trắng, cấy collagen, nâng cơ và trẻ hóa tại Việt Nam. Đặt lịch tư vấn ngay tại Iris Beauty.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://irisbeauty.vn/">
+    <meta property="og:image" content="https://irisbeauty.vn/assets/images/LOGO01.png">
+    <meta property="og:site_name" content="Iris Beauty Spa & Beauty">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Iris Beauty - Thẩm Mỹ Viện & Spa Chuyên Nghiệp">
+    <meta name="twitter:description"
+        content="Iris Beauty - Spa & thẩm mỹ viện chuyên nghiệp, chăm sóc sắc đẹp toàn diện, công nghệ hiện đại, đội ngũ chuyên gia uy tín.">
+    <meta name="twitter:image" content="https://irisbeauty.vn/assets/images/LOGO01.png">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
