Change primary color to #7981ff

--- a/index.html
+++ b/index.html
@@ -70,15 +70,6 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#technology">Công nghệ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#gallery">Hình ảnh khách hàng</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#branches">Cơ sở gần nhất</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#contact">Liên hệ</a>
                     </li>
                 </ul>
@@ -223,11 +214,11 @@
                     <div class="category-card h-100">
                         <div class="card border-0 shadow-sm">
                             <div class="card-body text-center p-4">
-                                <i class="fas fa-spa category-icon text-success mb-3"></i>
+                                <i class="fas fa-spa category-icon text-primary mb-3"></i>
                                 <h4 class="card-title">Tắm Trắng & Phun Trắng</h4>
                                 <p class="card-text">Công nghệ tắm trắng 5in1 giúp da trắng sáng tự nhiên an toàn hiệu
                                     quả</p>
-                                <a href="#whitening-treatment" class="btn btn-success">Đặt lịch ngay</a>
+                                <a href="#whitening-treatment" class="btn btn-primary">Đặt lịch ngay</a>
                             </div>
                         </div>
                     </div>
@@ -236,11 +227,11 @@
                     <div class="category-card h-100">
                         <div class="card border-0 shadow-sm">
                             <div class="card-body text-center p-4">
-                                <i class="fas fa-magic category-icon text-warning mb-3"></i>
+                                <i class="fas fa-magic category-icon text-primary mb-3"></i>
                                 <h4 class="card-title">Phun Xăm Thẩm Mỹ</h4>
                                 <p class="card-text">Phun xăm chân mày, môi, mí mắt với công nghệ 6D tạo nên vẻ đẹp hoàn
                                     hảo</p>
-                                <a href="#permanent-makeup" class="btn btn-warning">Đặt lịch ngay</a>
+                                <a href="#permanent-makeup" class="btn btn-primary">Đặt lịch ngay</a>
                             </div>
                         </div>
                     </div>
@@ -290,7 +281,6 @@
                                         <h6 class="text-muted mb-1">Trị Liệu Da</h6>
                                         <h5 class="card-title">Trị Mụn Y Khoa DermaPerfecta</h5>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <span class="price fw-bold text-primary">2.900.000 ₫</span>
                                             <button class="btn btn-outline-primary btn-sm">Đặt lịch ngay</button>
                                         </div>
                                     </div>
@@ -309,7 +299,6 @@
                                         <h6 class="text-muted mb-1">Tắm Trắng</h6>
                                         <h5 class="card-title">Tắm Trắng & Phun Trắng 5in1</h5>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <span class="price fw-bold text-primary">3.500.000 ₫</span>
                                             <button class="btn btn-outline-primary btn-sm">Đặt lịch ngay</button>
                                         </div>
                                     </div>
@@ -328,7 +317,6 @@
                                         <h6 class="text-muted mb-1">Phun Xăm</h6>
                                         <h5 class="card-title">Phun Xăm Chân Mày 6D</h5>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <span class="price fw-bold text-primary">4.500.000 ₫</span>
                                             <button class="btn btn-outline-primary btn-sm">Đặt lịch ngay</button>
                                         </div>
                                     </div>
@@ -347,7 +335,6 @@
                                         <h6 class="text-muted mb-1">Trẻ Hóa</h6>
                                         <h5 class="card-title">Cấy Collagen Tươi</h5>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <span class="price fw-bold text-primary">5.800.000 ₫</span>
                                             <button class="btn btn-outline-primary btn-sm">Đặt lịch ngay</button>
                                         </div>
                                     </div>
@@ -366,7 +353,6 @@
                                         <h6 class="text-muted mb-1">Laser</h6>
                                         <h5 class="card-title">Triệt Lông Laser Diode</h5>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <span class="price fw-bold text-primary">3.200.000 ₫</span>
                                             <button class="btn btn-outline-primary btn-sm">Đặt lịch ngay</button>
                                         </div>
                                     </div>
@@ -385,7 +371,6 @@
                                         <h6 class="text-muted mb-1">Mesotherapy</h6>
                                         <h5 class="card-title">Meso Không Kim Trẻ Hóa</h5>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <span class="price fw-bold text-primary">5.400.000 ₫</span>
                                             <button class="btn btn-outline-primary btn-sm">Đặt lịch ngay</button>
                                         </div>
                                     </div>
@@ -404,7 +389,6 @@
                                         <h6 class="text-muted mb-1">Nâng Cơ</h6>
                                         <h5 class="card-title">Nâng Cơ Mặt Thermage FLX</h5>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <span class="price fw-bold text-primary">2.800.000 ₫</span>
                                             <button class="btn btn-outline-primary btn-sm">Đặt lịch ngay</button>
                                         </div>
                                     </div>
@@ -423,7 +407,6 @@
                                         <h6 class="text-muted mb-1">Phun Xăm Môi</h6>
                                         <h5 class="card-title">Phun Xăm Môi Collagen</h5>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <span class="price fw-bold text-primary">3.500.000 ₫</span>
                                             <button class="btn btn-outline-primary btn-sm">Đặt lịch ngay</button>
                                         </div>
                                     </div>
@@ -442,7 +425,6 @@
                                         <h6 class="text-muted mb-1">Liệu Trình Body</h6>
                                         <h5 class="card-title">Giảm Béo Không Phẫu Thuật</h5>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <span class="price fw-bold text-primary">4.200.000 ₫</span>
                                             <button class="btn btn-outline-primary btn-sm">Đặt lịch ngay</button>
                                         </div>
                                     </div>
@@ -461,7 +443,6 @@
                                         <h6 class="text-muted mb-1">Thiết Kế Chân Mày</h6>
                                         <h5 class="card-title">Điêu Khắc Chân Mày 6D</h5>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <span class="price fw-bold text-primary">2.900.000 ₫</span>
                                             <button class="btn btn-outline-primary btn-sm">Đặt lịch ngay</button>
                                         </div>
                                     </div>
@@ -480,7 +461,6 @@
                                         <h6 class="text-muted mb-1">Chăm Sóc Nam</h6>
                                         <h5 class="card-title">Điều Trị Mụn Nam Giới</h5>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <span class="price fw-bold text-primary">2.400.000 ₫</span>
                                             <button class="btn btn-outline-primary btn-sm">Đặt lịch ngay</button>
                                         </div>
                                     </div>
@@ -499,7 +479,6 @@
                                         <h6 class="text-muted mb-1">Chống Lão Hóa</h6>
                                         <h5 class="card-title">Căng Da Mặt Không Dao Kéo</h5>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <span class="price fw-bold text-primary">3.800.000 ₫</span>
                                             <button class="btn btn-outline-primary btn-sm">Đặt lịch ngay</button>
                                         </div>
                                     </div>
@@ -522,18 +501,7 @@
             </div>
 
             <div class="row g-4">
-                <div class="col-lg-4">
-                    <div class="feature-card text-center">
-                        <div
-                            class="feature-icon bg-primary text-white rounded-circle mx-auto mb-3 d-flex align-items-center justify-content-center">
-                            <i class="fas fa-user-md fa-2x"></i>
-                        </div>
-                        <h4>Đội ngũ y bác sĩ chuyên môn</h4>
-                        <p class="text-muted">Đội ngũ y bác sĩ giàu kinh nghiệm, được đào tạo bài bản tại Hàn Quốc, cam
-                            kết mang lại hiệu quả tối ưu cho khách hàng.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <div class="feature-card text-center">
                         <div
                             class="feature-icon bg-success text-white rounded-circle mx-auto mb-3 d-flex align-items-center justify-content-center">
@@ -544,7 +512,7 @@
                             bảo an toàn và hiệu quả cao nhất.</p>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <div class="feature-card text-center">
                         <div
                             class="feature-icon bg-warning text-white rounded-circle mx-auto mb-3 d-flex align-items-center justify-content-center">
@@ -635,6 +603,19 @@
             </div>
         </div>
     </footer>
+
+    <!-- Floating Contact Buttons -->
+    <div class="floating-contacts">
+        <!-- Phone Button -->
+        <a href="tel:18003333" class="floating-btn phone-btn" title="Gọi ngay: 1800.3333">
+            <i class="fas fa-phone"></i>
+        </a>
+        <!-- Facebook Button -->
+        <a href="https://facebook.com/irisbeauty" target="_blank" class="floating-btn facebook-btn"
+            title="Chat Facebook">
+            <i class="fab fa-facebook-messenger"></i>
+        </a>
+    </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
