--- a/nuoc-hoa-unisex.html
+++ b/nuoc-hoa-unisex.html
@@ -793,6 +793,19 @@
         </div>
     </footer>
 
+    <!-- Floating Contact Buttons -->
+    <div class="floating-contacts">
+        <!-- Phone Button -->
+        <a href="tel:18003333" class="floating-btn phone-btn" title="Gọi ngay: 1800.3333">
+            <i class="fas fa-phone"></i>
+        </a>
+        <!-- Facebook Button -->
+        <a href="https://facebook.com/irisbeauty" target="_blank" class="floating-btn facebook-btn"
+            title="Chat Facebook">
+            <i class="fab fa-facebook-messenger"></i>
+        </a>
+    </div>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
